--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     
     <header>
+        <div id="editor"></div>
     </header>
     <div class="container">
         <main>
@@ -25,11 +26,10 @@
                     <button><>-<></button> <!-- link -->
                 </nav>
                 <div class="contents">
-                    <textarea></textarea>
+                <div class="textarea" contenteditable="true" spellcheck="false"></div>
                 </div>
             </div>
         </main>
     </div>
-
 </body>
 </html>
