--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rich-Text-format</title>
-    <link rel="stylesheet" href="/Styles/index.css">
-    <script src="Scripts/index.js" defer></script>
+    <link rel="stylesheet" href="./Styles/index.css">
+    <script src="./Scripts/index.js" defer></script>
 </head>
 <body>
     
@@ -24,6 +24,7 @@
                     <button>=</button> <!-- add a line -->
                     <button>U</button> <!-- Underline -->
                     <button><>-<></button> <!-- link -->
+                    <input type="text" class="link" placeholder="Link goes here!">
                 </nav>
                 <div class="contents">
                 <div class="textarea" contenteditable="true" spellcheck="false"></div>
