Style change text to icons and all visual

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <div class="container">
         <main>
             <div class="tab">
-                <nav class="toolbox">
-                    <button>T</button> <!-- <H1> -->
-                    <button>B</button> <!-- Bold -->
-                    <button>I</button> <!-- Italic -->
-                    <button><></button> <!-- subscrip -->
-                    <button>=</button> <!-- add a line -->
-                    <button>U</button> <!-- Underline -->
-                    <button><>-<></button> <!-- link -->
-                    <input type="text" class="link" placeholder="Link goes here!">
-                </nav>
+                <div class="toolbox">
+                    <button><img src="https://img.icons8.com/ios-filled/12/000000/t.png"/></button> <!-- <H1> -->
+                    <button><img src="https://img.icons8.com/ios-filled/12/000000/b.png"/></button> <!-- Bold -->
+                    <button><img src="https://img.icons8.com/ios-filled/12/000000/italic.png"/></button> <!-- Italic -->
+                    <button><img src="https://img.icons8.com/ios-glyphs/12/000000/less-or-equal.png"/><img src="https://img.icons8.com/ios-glyphs/12/000000/more-or-equal.png"/></button> <!-- subscrip -->
+                    <button><img src="https://img.icons8.com/ios-filled/12/000000/list.png"/></button> <!-- add a line -->
+                    <button><img src="https://img.icons8.com/ios-filled/12/000000/underline.png"/></button> <!-- Underline -->
+                    <button><img src="https://img.icons8.com/ios-filled/13/000000/link--v1.png"/></button> <!-- link -->
+                    <input type="text" class="linkURL" placeholder="Link goes here!">
+                </div>
                 <div class="contents">
                 <div class="textarea" contenteditable="true" spellcheck="false"></div>
                 </div>
